--- a/simulated_data/simulation_run_input_files/sample_manifest_example.json
+++ b/simulated_data/simulation_run_input_files/sample_manifest_example.json
@@ -1,6 +1,6 @@
 [
     {
-        "sample_id": "crtmut_spec_q25", 
+        "sample_id": "wt_spec_q25", 
         "genotypes": ["wt_spec"], 
         "proportions": [1], 
         "num_reads": 654
@@ -17,43 +17,6 @@
         "proportions": [1], 
         "num_reads": 1445
     },
-    {
-        "sample_id": "wt_grc1_q25", 
-        "genotypes": ["wt_spec"], 
-        "proportions": [1], 
-        "num_reads": 25568
-    },
-    {
-        "sample_id": "wt_grc1_q50", 
-        "genotypes": ["wt_spec"], 
-        "proportions": [1], 
-        "num_reads": 32424
-    },
-    {
-        "sample_id": "wt_grc1_q75", 
-        "genotypes": ["wt_spec"], 
-        "proportions": [1], 
-        "num_reads": 40281
-    },
-        {
-        "sample_id": "wt_grc2_q25", 
-        "genotypes": ["wt_spec"], 
-        "proportions": [1], 
-        "num_reads": 26732
-    },
-    {
-        "sample_id": "wt_grc2_q50", 
-        "genotypes": ["wt_spec"], 
-        "proportions": [1], 
-        "num_reads": 32519
-    },
-    {
-        "sample_id": "wt_grc2_q75", 
-        "genotypes": ["wt_spec"], 
-        "proportions": [1], 
-        "num_reads": 39864
-    },
-
     {
         "sample_id": "crtmut_spec_q25", 
         "genotypes": ["crtmut_spec"], 
@@ -73,40 +36,75 @@
         "num_reads": 1445
     },
     {
+        "sample_id": "wt_grc1_q25", 
+        "genotypes": ["wt_grc1"], 
+        "proportions": [1], 
+        "num_reads": 25568
+    },
+    {
+        "sample_id": "wt_grc1_q50", 
+        "genotypes": ["wt_grc1"], 
+        "proportions": [1], 
+        "num_reads": 32424
+    },
+    {
+        "sample_id": "wt_grc1_q75", 
+        "genotypes": ["wt_grc1"], 
+        "proportions": [1], 
+        "num_reads": 40281
+    },
+    {
         "sample_id": "crtmut_grc1_q25", 
-        "genotypes": ["crtmut_spec"], 
+        "genotypes": ["crtmut_grc1"], 
         "proportions": [1], 
         "num_reads": 25568
     },
     {
         "sample_id": "crtmut_grc1_q50", 
-        "genotypes": ["crtmut_spec"], 
+        "genotypes": ["crtmut_grc1"], 
         "proportions": [1], 
         "num_reads": 32424
     },
     {
         "sample_id": "crtmut_grc1_q75", 
-        "genotypes": ["crtmut_spec"], 
+        "genotypes": ["crtmut_grc1"], 
         "proportions": [1], 
         "num_reads": 40281
     },
-        {
+    {
+        "sample_id": "wt_grc2_q25", 
+        "genotypes": ["wt_grc2"], 
+        "proportions": [1], 
+        "num_reads": 26732
+    },
+    {
+        "sample_id": "wt_grc2_q50", 
+        "genotypes": ["wt_grc2"], 
+        "proportions": [1], 
+        "num_reads": 32519
+    },
+    {
+        "sample_id": "wt_grc2_q75", 
+        "genotypes": ["wt_grc2"], 
+        "proportions": [1], 
+        "num_reads": 39864
+    },
+    {
         "sample_id": "crtmut_grc2_q25", 
-        "genotypes": ["crtmut_spec"], 
+        "genotypes": ["crtmut_grc2"], 
         "proportions": [1], 
         "num_reads": 26732
     },
     {
         "sample_id": "crtmut_grc2_q50", 
-        "genotypes": ["crtmut_spec"], 
+        "genotypes": ["crtmut_grc2"], 
         "proportions": [1], 
         "num_reads": 32519
     },
     {
         "sample_id": "crtmut_grc2_q75", 
-        "genotypes": ["crtmut_spec"], 
+        "genotypes": ["crtmut_grc2"], 
         "proportions": [1], 
         "num_reads": 39864
     }
-
 ]
